--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-react-app": "3.0.3",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "jest": "21.2.1",
     "raf": "3.3.2",
     "react": "16.0.0",
